fix: Overlapping css rules for notification title

--- a/main.css
+++ b/main.css
@@ -800,7 +800,7 @@ blockquote {
     border-radius: 6px;
 }
 
-.notification-body .title {
+.notification-body .notificationTitle {
     margin-top: 0px;
 }
 
